samples/errors/generics/function_arity.lif
function foo[T]() {}

foo[Int, Int];
